Explicitly add opens directives to MAVEN_OPTS
Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>