@@ -133,7 +133,7 @@ spec:
             sh 'gpg --list-secret-keys'
           }
           sh '''
-            export MAVEN_OPTS="--illegal-access=permit"
+            export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
             mvn deploy \
               -DskipTests=true -DnoDocker -DcreateGPGSignature=true -DcreateJavadoc=true -DenableEclipseJarSigner=true \
               -am -pl "\
